objects/skuid__Preferences__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>skuid__Auto_Assign_Licenses_on_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-assign a License to Skuid (and optionally other packages) when a new user is created or newly-activated.</description>
        <label>Auto Assign Licenses on Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Auto_Assign_Perm_Sets_on_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-assign the &quot;Skuid Page Viewer&quot; Permission Set (and/or other Permission Sets) when a new user is created or newly-activated.</description>
        <label>Auto Assign Perm Sets on Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Auto_Revoke_Licenses_on_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-revoke a License to Skuid (and optionally licenses to other packages) when a user is deactivated.</description>
        <label>Auto Revoke Licenses on Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Auto_Revoke_Perm_Sets_on_Deactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, Skuid will auto-revoke the Skuid Page Viewer (and/or other Permission sets) when a user is deactivated.</description>
        <label>Auto Revoke Perm Sets on Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Builder_Theme__c</fullName>
        <label>Default Composer Theme</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Mobile_Builder_Theme__c</fullName>
        <label>Default Mobile Composer Theme</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Mobile_Theme__c</fullName>
        <label>Default Mobile Theme</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Default_Theme__c</fullName>
        <label>Default Theme</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Package_Names_For_Auto_Assignment__c</fullName>
        <defaultValue>&quot;skuid&quot;</defaultValue>
        <description>(Optional) Namespaces of packages to which to auto-assign licenses when new users are created or activated. Semi-colon delimited.</description>
        <label>Packages to Auto-Assign Licenses to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Package_Names_For_Auto_Revocation__c</fullName>
        <defaultValue>&quot;skuid&quot;</defaultValue>
        <description>(Optional) Namespaces of packages from which licenses should be auto-revoked when users are deactivated. Semi-colon delimited.</description>
        <label>Packages to Auto-Revoke Licenses to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Perm_Sets_For_Auto_Assignment__c</fullName>
        <defaultValue>&quot;skuid__Skuid_Page_Viewer&quot;</defaultValue>
        <description>(Optional) Names of Permission Sets to auto-assign to new or newly-activated users. Semi-colon delimited and namespace-prefixed, e.g. &quot;skuid__Skuid_Page_Viewer&quot;</description>
        <label>Permission Sets to Auto-Assign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Perm_Sets_For_Auto_Revocation__c</fullName>
        <defaultValue>&quot;skuid__Skuid_Page_Viewer&quot;</defaultValue>
        <description>(Optional) Names of Permission Sets to auto-revoke from deactivated users. Semi-colon delimited and namespace-prefixed, e.g. &quot;skuid__Skuid_Page_Viewer&quot;</description>
        <label>Permission Sets to Auto-Revoke</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Use_Component_Packs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Component Packs</label>
        <type>Checkbox</type>
    </fields>
    <label>Preferences</label>
</CustomObject>